public/styles/loadinganim.css
.loadanim{
    background-color: white;
    display: flex;
    position: fixed;
    z-index: 99;
    width: 100vw;
    height: 100vh;
    justify-content: center;
    align-items: center;
    text-align: center;
    animation: opacity 1s ease-out 7s;
}

.loading-image{
    background-size: cover;
    background-position: center;
    opacity: 0.4;
    position: absolute;
    z-index: -1;
    animation: image 7s ease-in;
}

.loading-cont{
    background-color: rgba(139, 139, 139, 0.3);
    height: 500px;
    padding: 60px;
    backdrop-filter:  blur(0.6rem);
    border-radius: 15px;
}


.loading-container h1{
    font-family: 'gilroy-bold';
    font-size: 120px;
    line-height: 75px;
    animation: title 1.3s ease-in-out;
}

.loading-container > p{
    font-family: 'gilroy';
    font-size: 110px;
    color: rgb(255, 255, 255);
    animation: title 1.3s ease-in-out;
}

.loading-desc{
    margin-top: 70px;
    animation: sub 1.3s ease-in-out; 

}

.loading-desc h3{
    font-size: 30px;
    font-family: 'gilroy-bold';
    color: white;
}

.loading-desc p{
    font-size: 20px;
    margin-top: 10px;
    margin-bottom: 15px;
    font-family: 'gilroy';
    color: white;
    line-height: 30px;
}

.loading-desc span{
    font-family: 'gilroy';
    font-size: 15px;
    color: gray;
    font-style: italic;

}


@keyframes title{
    from{
        transform: translate(0px, 200px);
        opacity: 0;
    }
    to{
        transform: translate(0px, 0px);
    }
}

@keyframes sub{
    0%{
        opacity: 0;
    }
    60%{
        opacity: 0;
    }
    100%{
        opacity: 1;
    }
}

@keyframes opacity{
    to{
        opacity: 0;
    }
}

@keyframes image{
    from{
        opacity: 0.8;
        transform: scale(1.2);
    }
    to{
        opacity: 0.4;
        transform: scale(1.4);
    }
}

.remove{
    display: none;
}

